Fixed an issue where some filenames were too long for the viewport. Fixed another issue where file paths were incorrect if they were also used by Vanity.

--- a/src/Vanity/Template/DesktopHTML/static/styles/app.css
+++ b/src/Vanity/Template/DesktopHTML/static/styles/app.css
@@ -298,6 +298,10 @@ table.class-reference tr th p {
 
 table.class-reference tr p {
 	margin: 0.5em 0;
+	max-width: 53em;
+	white-space: nowrap;
+	overflow-x: hidden;
+	text-overflow: ellipsis;
 }
 
 table.class-reference tr td {
